--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_halaman_registrsi_dokter">HalamanRegistrsiDokterActivity</string>
     <string name="title_activity_registrasi_dokter">RegistrasiDOkterActivity</string>
+    <string name="title_activity_registrasi_klinik">registrasiKlinikActivity</string>
 </resources>
