--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_halaman_registrsi_dokter">HalamanRegistrsiDokterActivity</string>
     <string name="title_activity_registrasi_dokter">RegistrasiDOkterActivity</string>
     <string name="title_activity_registrasi_klinik">registrasiKlinikActivity</string>
+    <string name="title_activity_pemilihan_jadwal_oleh_pasien">PemilihanJadwalOlehPasien</string>
 </resources>
