--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_registrasi_dokter">RegistrasiDOkterActivity</string>
     <string name="title_activity_registrasi_klinik">registrasiKlinikActivity</string>
     <string name="title_activity_pemilihan_jadwal_oleh_pasien">PemilihanJadwalOlehPasien</string>
+    <string name="title_activity_pemilihan_jadwal_sukses">pemilihanJadwalSukses</string>
 </resources>
