Commit List Dokter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="title_activity_pemilihan_jadwal_oleh_pasien">PemilihanJadwalOlehPasien</string>
     <string name="title_activity_pemilihan_jadwal_sukses">pemilihanJadwalSukses</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_jadwal_pilih">JadwalPilihActivity</string>
+    <string name="title_activity_list_dokter">ListDokterActivity</string>
 </resources>
